wwwroot/css/viewer.css
body {
  font-family: Arial,Helvetica,sans-serif;
}

p, li {
  font-size: 87.5%;
}

#left-bar {
  float: left;
  clear: none;
  width: 12em;
  margin: 0 0 0 0;
  padding: 0em 0.5em 0em 0.25em;
  line-height: 110%;
}

#main-wrap {
  float: none;
  clear: none;
  margin: 0 16em 0 14em;
  padding: 0.25em 0.25em 0.25em 0.5em;
}

.blank-horizon {
  background-color: White;
}

.desert-horizon {
  background-color: Moccasin;
}

.tropical-horizon {
  background-color: MediumAquamarine;
}

.alpine-horizon {
  background-color: LightCyan;
}

.city-horizon {
  background-color: LightSteelBlue;
}

.country-horizon {
  background-color: LightGoldenrodYellow;
}

.unknown-horizon {
  background-color: Thistle;
}

